welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: ';' expected but 'return' found.
is (isAsleep) return false
              ^